// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatasetCard.vue should render correct contents 1`] = `
<a href="http://example.com/tables/untitled_table_13" class="dataset-row">
  <div class="dataset-cell cell--start">
    <div class="row-dataType">
      <div class="icon--dataType icon--point"></div>
    </div> <span class="checkbox row-checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
  </div>
  <div class="dataset-cell cell--main">
    <div class="title-container">
      <h3 class="text is-caption is-txtGrey u-ellipsis row-title">
        untitled_table_13
      </h3> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
    </div>
    <!---->
  </div>
  <div class="dataset-cell cell--large"><span class="text is-small is-txtSoftGrey">DatasetCard.lastUpdated</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">DatasetCard.numberRows</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">34.4 MB</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">1 map</span></div>
  <div class="dataset-cell cell--small cell--privacy"><span class="icon icon--privacy icon--private"></span> <span class="text is-small is-txtSoftGrey">DatasetCard.shared.PRIVATE</span></div>
  <div class="dataset-cell"></div>
</a>
`;

exports[`DatasetCard.vue should render multiple tags 1`] = `
<a href="http://example.com/tables/untitled_table_13" class="dataset-row">
  <div class="dataset-cell cell--start">
    <div class="row-dataType">
      <div class="icon--dataType icon--point"></div>
    </div> <span class="checkbox row-checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
  </div>
  <div class="dataset-cell cell--main">
    <div class="title-container">
      <h3 class="text is-caption is-txtGrey u-ellipsis row-title">
        untitled_table_13
      </h3> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
    </div>
    <div class="row-metadataContainer">
      <div class="row-metadata"><img svg-inline="" src="../../assets/icons/datasets/tag.svg" class="icon-metadata">
        <!---->
        <featuresdropdown-stub list="Hi,Hello,CARTO Rules,Just one more tag here"><span class="feature-text text is-small is-txtSoftGrey">4 DatasetCard.tags</span></featuresdropdown-stub>
      </div>
      <!---->
    </div>
  </div>
  <div class="dataset-cell cell--large"><span class="text is-small is-txtSoftGrey">DatasetCard.lastUpdated</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">DatasetCard.numberRows</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">34.4 MB</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">1 map</span></div>
  <div class="dataset-cell cell--small cell--privacy"><span class="icon icon--privacy icon--private"></span> <span class="text is-small is-txtSoftGrey">DatasetCard.shared.PRIVATE</span></div>
  <div class="dataset-cell"></div>
</a>
`;

exports[`DatasetCard.vue should render tags 1`] = `
<a href="http://example.com/tables/untitled_table_13" class="dataset-row">
  <div class="dataset-cell cell--start">
    <div class="row-dataType">
      <div class="icon--dataType icon--point"></div>
    </div> <span class="checkbox row-checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
  </div>
  <div class="dataset-cell cell--main">
    <div class="title-container">
      <h3 class="text is-caption is-txtGrey u-ellipsis row-title">
        untitled_table_13
      </h3> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
    </div>
    <div class="row-metadataContainer">
      <div class="row-metadata"><img svg-inline="" src="../../assets/icons/datasets/tag.svg" class="icon-metadata">
        <ul class="tag-list">
          <li><a href="#" class="text is-small is-txtSoftGrey">Hi</a><span class="text is-small is-txtSoftGrey">,&nbsp;</span></li>
          <li><a href="#" class="text is-small is-txtSoftGrey">Hello</a><span class="text is-small is-txtSoftGrey">,&nbsp;</span></li>
          <li><a href="#" class="text is-small is-txtSoftGrey">CARTO Rules</a>
            <!---->
          </li>
        </ul>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div class="dataset-cell cell--large"><span class="text is-small is-txtSoftGrey">DatasetCard.lastUpdated</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">DatasetCard.numberRows</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">34.4 MB</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">1 map</span></div>
  <div class="dataset-cell cell--small cell--privacy"><span class="icon icon--privacy icon--private"></span> <span class="text is-small is-txtSoftGrey">DatasetCard.shared.PRIVATE</span></div>
  <div class="dataset-cell"></div>
</a>
`;

exports[`DatasetCard.vue should select the card when the checkbox is clicked 1`] = `
<a href="http://example.com/tables/untitled_table_13" class="dataset-row selected">
  <div class="dataset-cell cell--start">
    <div class="row-dataType">
      <div class="icon--dataType icon--point"></div>
    </div> <span class="checkbox row-checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
  </div>
  <div class="dataset-cell cell--main">
    <div class="title-container">
      <h3 class="text is-caption is-txtGrey u-ellipsis row-title">
        untitled_table_13
      </h3> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
    </div>
    <!---->
  </div>
  <div class="dataset-cell cell--large"><span class="text is-small is-txtSoftGrey">DatasetCard.lastUpdated</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">DatasetCard.numberRows</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">34.4 MB</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">1 map</span></div>
  <div class="dataset-cell cell--small cell--privacy"><span class="icon icon--privacy icon--private"></span> <span class="text is-small is-txtSoftGrey">DatasetCard.shared.PRIVATE</span></div>
  <div class="dataset-cell"></div>
</a>
`;

exports[`DatasetCard.vue should show the owner of the map if it is shared 1`] = `
<a href="http://example.com/tables/untitled_table_13" class="dataset-row">
  <div class="dataset-cell cell--start">
    <div class="row-dataType">
      <div class="icon--dataType icon--point"></div>
    </div> <span class="checkbox row-checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
  </div>
  <div class="dataset-cell cell--main">
    <div class="title-container">
      <h3 class="text is-caption is-txtGrey u-ellipsis row-title">
        untitled_table_13
      </h3> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
    </div>
    <div class="row-metadataContainer">
      <!---->
      <div class="row-metadata"><img svg-inline="" src="../../assets/icons/datasets/user.svg" class="icon-metadata"> <span class="text is-small is-txtSoftGrey">cdb</span></div>
    </div>
  </div>
  <div class="dataset-cell cell--large"><span class="text is-small is-txtSoftGrey">DatasetCard.lastUpdated</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">DatasetCard.numberRows</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">34.4 MB</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">1 map</span></div>
  <div class="dataset-cell cell--small cell--privacy"><span class="icon icon--privacy icon--private"></span> <span class="text is-small is-txtSoftGrey">DatasetCard.shared.PRIVATE</span></div>
  <div class="dataset-cell"></div>
</a>
`;
